update  work  space

--- a/Frontend/Cantine/src/app/admin/orders/order-dashbord/order-dashboard.component.html
+++ b/Frontend/Cantine/src/app/admin/orders/order-dashbord/order-dashboard.component.html
@@ -1,18 +1,18 @@
 
 <div class="order">
     <div class="center">
-        <h1>Commandes du jour</h1>
+        <h1>Commandes du {{Date() |  date:'EEEE d MMMM y':'fr-FR'}}</h1>
     </div>
 
     <div *ngFor="let  order  of ordersOfDay$ |async">
-        <div class="container">
+        <div  class="container">
             <div class="row test">
                 <div class="col-md-2">
                     <span>  N° Commande  :  {{order.uuid}} </span>
                 </div>
                 <div class="col-md-2">
-                    <span><strong> Etudiant : </strong> <span (click)="goToStudentProfile()"
-                                                              style="color: blue">{{order.studentOrder.firstname}}  {{order.studentOrder.lastname}}</span> </span>
+                    <span><strong> Etudiant : </strong> <span (click)="goToStudentProfile(order.studentOrder.uuid)"
+                                                              style="color: blue; cursor: pointer">{{order.studentOrder.firstname}}  {{order.studentOrder.lastname}}</span> </span>
                 </div>
                 <div class="col-md-2">
                     <span><strong>Date : </strong> {{order.creationDate}}</span>
@@ -43,7 +43,6 @@
 
 <style>
     .order {
-        border: black 2px solid;
         margin: 50px;
     }
 
