add Meals  design

--- a/Mobile/cantine/src/app/core-cantine/home/home.component.html
+++ b/Mobile/cantine/src/app/core-cantine/home/home.component.html
@@ -16,8 +16,9 @@
 
 
 
-<ion-text color="white"  style="text-align: center"> <b>Cantinère </b> </ion-text>
-
+<ion-text color="white">
+  <h1 style="text-align: center">Cantinère</h1>
+</ion-text>
 
 <ion-card color="medium">
   <img  src="./assets/images/homePage1.png"  alt="Our  menu image"/>
