--- a/Mobile/cantine/src/app/core-cantine/home/home.component.html
+++ b/Mobile/cantine/src/app/core-cantine/home/home.component.html
@@ -31,7 +31,7 @@
     </ion-card-content>
 </ion-card>
 
-<ion-card color="medium">
+<ion-card color="medium" style="margin-bottom: 70px">
   <img  src="./assets/images/homePage2.png"  alt="Our  meals image"/>
   <ion-card-header>
     <ion-card-title >Nos  Menus </ion-card-title>
