make  student  authentication

--- a/Mobile/cantine/src/app/shared-module/main-core-cantine/main-core-cantine.component.html
+++ b/Mobile/cantine/src/app/shared-module/main-core-cantine/main-core-cantine.component.html
@@ -3,7 +3,7 @@
     <ion-toolbar>
       <ion-title class="center">Cantine </ion-title>
       <ion-buttons  slot="end" style="margin-right: 5px;">
-        <img src="../../../assets/icon/logo.png" alt="cantine-logo" width="25px">
+        <img src="{{this.studentImage}}" alt="cantine-logo" width="25px">
       </ion-buttons>
     </ion-toolbar>
   </ion-header>
