--- a/Mobile/cantine/src/app/shared-module/main-core-cantine/main-core-cantine.component.html
+++ b/Mobile/cantine/src/app/shared-module/main-core-cantine/main-core-cantine.component.html
@@ -2,9 +2,13 @@
   <ion-header>
     <ion-toolbar>
       <ion-title class="center">Cantine </ion-title>
-      <ion-buttons  slot="end" style="margin-right: 5px;">
+<!--      <ion-buttons  slot="end" style="margin-right: 5px;">
         <img src="{{this.studentImage}}" alt="cantine-logo" width="25px">
-      </ion-buttons>
+      </ion-buttons>-->
+
+      <ion-avatar slot="end" id="open-custom-dialog" expand="block">
+        <img alt="Silhouette of a person's head" src="{{this.studentImage}}"   />
+      </ion-avatar>
     </ion-toolbar>
   </ion-header>
 
@@ -45,7 +49,56 @@
 </ion-app>
 
 
+<ion-modal id="example-modal" #modal trigger="open-custom-dialog" >
+  <ng-template>
+    <div class="wrapper">
+      <h1>Dialog header</h1>
+
+      <ion-list lines="none">
+        <ion-item button="true" detail="false" (click)="modal.dismiss()">
+          <ion-icon name="person-circle"></ion-icon>
+          <ion-label>Item 1</ion-label>
+        </ion-item>
+        <ion-item button="true" detail="false" (click)="modal.dismiss()">
+          <ion-icon name="person-circle"></ion-icon>
+          <ion-label>Item 2</ion-label>
+        </ion-item>
+        <ion-item button="true" detail="false" (click)="modal.dismiss()">
+          <ion-icon name="person-circle"></ion-icon>
+          <ion-label>Item 3</ion-label>
+        </ion-item>
+      </ion-list>
+    </div>
+  </ng-template>
+</ion-modal>
+
+
 <style>
+  ion-modal#example-modal {
+    --width: fit-content;
+    --min-width: 250px;
+    --height: fit-content;
+    --border-radius: 6px;
+    --box-shadow: 0 28px 48px rgba(0, 0, 0, 0.4);
+  }
+
+  ion-modal#example-modal h1 {
+    margin: 20px 20px 10px 20px;
+  }
+
+  ion-modal#example-modal ion-icon {
+    margin-right: 6px;
+
+    width: 48px;
+    height: 48px;
+
+    padding: 4px 0;
+
+    color: #aaaaaa;
+  }
+
+  ion-modal#example-modal .wrapper {
+    margin-bottom: 10px;
+  }
 
 </style>
-
