--- a/Mobile/cantine/src/app/shared-module/main-core-cantine/main-core-cantine.component.html
+++ b/Mobile/cantine/src/app/shared-module/main-core-cantine/main-core-cantine.component.html
@@ -1,13 +1,13 @@
 <ion-app>
   <ion-header>
     <ion-toolbar>
-      <ion-title class="center">Cantine </ion-title>
-<!--      <ion-buttons  slot="end" style="margin-right: 5px;">
-        <img src="{{this.studentImage}}" alt="cantine-logo" width="25px">
-      </ion-buttons>-->
+      <ion-title class="center">Cantine</ion-title>
+      <!--      <ion-buttons  slot="end" style="margin-right: 5px;">
+              <img src="{{this.studentImage}}" alt="cantine-logo" width="25px">
+            </ion-buttons>-->
 
       <ion-avatar slot="end" id="open-custom-dialog" expand="block">
-        <img alt="Silhouette of a person's head" src="{{this.studentImage}}"   />
+        <img alt="Silhouette of a person's head" src="{{this.studentImage}}"/>
       </ion-avatar>
     </ion-toolbar>
   </ion-header>
@@ -15,15 +15,14 @@
   <ion-content>
 
     <!--  main  container  -->
-  <router-outlet></router-outlet>
+    <router-outlet></router-outlet>
 
 
-
-   <!-- <ion-footer>
-      <ion-toolbar>
-        <ion-title>Footer</ion-title>
-      </ion-toolbar>
-    </ion-footer>-->
+    <!-- <ion-footer>
+       <ion-toolbar>
+         <ion-title>Footer</ion-title>
+       </ion-toolbar>
+     </ion-footer>-->
     <ion-tabs>
       <ion-tab-bar slot="bottom">
         <ion-tab-button tab="home">
@@ -36,7 +35,7 @@
         </ion-tab-button>
         <ion-tab-button (click)="goToMeals()">
           <ion-icon name="pizza-outline"></ion-icon>
-          Nos  plats
+          Nos plats
         </ion-tab-button>
         <ion-tab-button>
           <ion-icon name="reorder-four-outline"></ion-icon>
@@ -49,23 +48,21 @@
 </ion-app>
 
 
-<ion-modal id="example-modal" #modal trigger="open-custom-dialog" >
+<ion-modal id="example-modal" #modal trigger="open-custom-dialog">
   <ng-template>
     <div class="wrapper">
-      <h1>Dialog header</h1>
+      <h1></h1>
 
       <ion-list lines="none">
         <ion-item button="true" detail="false" (click)="modal.dismiss()">
-          <ion-icon name="person-circle"></ion-icon>
-          <ion-label>Item 1</ion-label>
+          <ion-avatar slot="start" expand="block">
+            <img alt="Silhouette of a person's head" src="{{this.studentImage}}"/>
+          </ion-avatar>
+          <ion-label>Mon profile</ion-label>
         </ion-item>
-        <ion-item button="true" detail="false" (click)="modal.dismiss()">
-          <ion-icon name="person-circle"></ion-icon>
-          <ion-label>Item 2</ion-label>
-        </ion-item>
-        <ion-item button="true" detail="false" (click)="modal.dismiss()">
-          <ion-icon name="person-circle"></ion-icon>
-          <ion-label>Item 3</ion-label>
+        <ion-item button="true" detail="false" (click)="modal.dismiss(); logout()">
+          <ion-icon name="log-out-outline" style="width: 30px"></ion-icon>
+          <ion-label>Déconnection</ion-label>
         </ion-item>
       </ion-list>
     </div>
@@ -73,32 +70,3 @@
 </ion-modal>
 
 
-<style>
-  ion-modal#example-modal {
-    --width: fit-content;
-    --min-width: 250px;
-    --height: fit-content;
-    --border-radius: 6px;
-    --box-shadow: 0 28px 48px rgba(0, 0, 0, 0.4);
-  }
-
-  ion-modal#example-modal h1 {
-    margin: 20px 20px 10px 20px;
-  }
-
-  ion-modal#example-modal ion-icon {
-    margin-right: 6px;
-
-    width: 48px;
-    height: 48px;
-
-    padding: 4px 0;
-
-    color: #aaaaaa;
-  }
-
-  ion-modal#example-modal .wrapper {
-    margin-bottom: 10px;
-  }
-
-</style>
