--- a/Mobile/cantine/src/app/shared-module/main-core-cantine/main-core-cantine.component.scss
+++ b/Mobile/cantine/src/app/shared-module/main-core-cantine/main-core-cantine.component.scss
@@ -3,11 +3,39 @@ ion-content {
 }
 ion-tabs {
   position: fixed;
-  top: 91%;
+  top:  calc( 93vh + 5px ) ;
   height: 60px;
   z-index: 1;
 }
 
 ion-avatar {
   margin-right: 10px;
+  width: 40px;
+  height: 40px;
+}
+ion-modal#example-modal {
+  --width: fit-content;
+  --min-width: 250px;
+  --height: fit-content;
+  --border-radius: 6px;
+  --box-shadow: 0 28px 48px rgba(0, 0, 0, 0.4);
+}
+
+ion-modal#example-modal h1 {
+  margin: 20px 20px 10px 20px;
+}
+
+ion-modal#example-modal ion-icon {
+  margin-right: 6px;
+
+  width: 48px;
+  height: 48px;
+
+  padding: 4px 0;
+
+  color: #aaaaaa;
+}
+
+ion-modal#example-modal .wrapper {
+  margin-bottom: 10px;
 }
