update  student  profile  component

--- a/Mobile/cantine/src/app/student/profile/profile.component.html
+++ b/Mobile/cantine/src/app/student/profile/profile.component.html
@@ -1,3 +1,7 @@
-<p>
-  profile works!
-</p>
+<ion-app>
+  <ion-header>
+    <ion-toolbar>
+      <ion-title class="center">Cantine</ion-title>
+    </ion-toolbar>
+  </ion-header>
+</ion-app>
