add  profile  student  picture

--- a/Mobile/cantine/src/app/shared-module/main-core-cantine/main-core-cantine.component.html
+++ b/Mobile/cantine/src/app/shared-module/main-core-cantine/main-core-cantine.component.html
@@ -3,7 +3,7 @@
     <ion-toolbar>
       <ion-title class="center">Cantine</ion-title>
       <ion-avatar slot="end" id="open-custom-dialog" expand="block">
-        <img alt="Silhouette of a person's head" src="{{this.studentImage}}"/>
+        <img alt="student profile  picture " src="{{this.studentImage}}"/>
       </ion-avatar>
     </ion-toolbar>
   </ion-header>
