--- a/Mobile/cantine/src/app/student/profile/profile.component.html
+++ b/Mobile/cantine/src/app/student/profile/profile.component.html
@@ -3,5 +3,18 @@
     <ion-toolbar>
       <ion-title class="center">Cantine</ion-title>
     </ion-toolbar>
+
+    <ion-img src="assets/images/aston.png" alt="aston ecole  d'inforamtique "></ion-img>
+
+    <div class="student-profile">
+      <img alt="my profile picture" src="{{this.student.image}}"/>
+    </div>
+    <h1> {{ this.student.firstname }}  {{ this.student.lastname }} </h1>
   </ion-header>
+
+  <ion-content>
+
+
+  </ion-content>
 </ion-app>
+
