--- a/Mobile/cantine/src/app/student/profile/profile.component.scss
+++ b/Mobile/cantine/src/app/student/profile/profile.component.scss
@@ -1,15 +1,64 @@
 ion-header {
+  .title{
+    text-align: center;
+  }
   .student-profile {
-    img{
-      width:  120px;
+    position: relative;
+
+    img {
+      position: absolute;
+      width: 120px;
       height: 120px;
       border-radius: 100px;
-      border: 1px  solid rgba(125, 195, 191, 0.53);
-      button: 10000px;
-      z-index: 1;
+      border: 2px solid rgba(125, 195, 191, 0.53);
+      top: -60px;
     }
+
     display: flex;
     justify-content: center;
   }
+
+  h1 {
+    position: relative;
+    top: 60px;
+    color: #89adbd;
+  }
+}
+ion-content {
+  border: 1px solid #16212c;
+  border-radius: 10px;
+
+  .container-wallet {
+    margin-top: 15%;
+    font-weight: bold;
+    font-size: 1.2rem;
+  }
+  p {
+    text-align: center;
+    margin: 0;
+    padding: 0;
+  }
+  .student-class {
+    margin-top: 5px;
+    font-size: 0.7rem;
+    text-align: center;
+  }
+
+  .container-student-info {
+    margin-top: 30px;
+
+  }
+  ion-card {
+    border-radius: 20px;
+    color: white;
+  }
+
+  ion-button {
+    width: 50%;
+    transform: translateX(50%);
+    border-radius: 10px;
+    margin-top: 2vh;
+  }
+
 }
 
