--- a/Mobile/cantine/src/app/shared-module/main-core-cantine/main-core-cantine.component.html
+++ b/Mobile/cantine/src/app/shared-module/main-core-cantine/main-core-cantine.component.html
@@ -20,7 +20,7 @@
           <ion-icon name="home"></ion-icon>
           Accueil
         </ion-tab-button>
-        <ion-tab-button tab="radio">
+        <ion-tab-button (click)="goToMenus()">
           <ion-icon name="fast-food-outline"></ion-icon>
           Nos Menus
         </ion-tab-button>
