--- a/Frontend/Cantine/src/app/core-cantine/meals/meals.componenet.html
+++ b/Frontend/Cantine/src/app/core-cantine/meals/meals.componenet.html
@@ -1,6 +1,6 @@
 <!--<h1 class="center"> Nos Plats </h1>-->
 <div class="center" style="margin: 10px">
-     <img src="assets/images/nos-menus.jpg" alt="food" style="width: 50%; height: 20%">
+     <img src="../../../../../../Mobile/cantine/src/assets/images/nos-menus.jpg" alt="food" style="width: 50%; height: 20%">
 </div>
 
 <div class="container">
