update validate  order  by  admin

--- a/Frontend/Cantine/src/app/admin/orders/order-dashbord/order-dashboard.component.html
+++ b/Frontend/Cantine/src/app/admin/orders/order-dashbord/order-dashboard.component.html
@@ -1,4 +1,4 @@
-
+<app-loading-dialog *ngIf="isLoading"></app-loading-dialog>
 <div class="order">
     <div class="center">
         <h1>Commandes du {{Date() |  date:'EEEE d MMMM y':'fr-FR'}}</h1>
