--- a/Frontend/Cantine/src/app/admin/main-admin/main-admin.component.html
+++ b/Frontend/Cantine/src/app/admin/main-admin/main-admin.component.html
@@ -56,7 +56,7 @@
         <button class="menu-button" mat-button (click)="goToOrders()">
             <mat-icon>shopping_cart</mat-icon>
             <span>  Commandes  </span>
-            <mat-icon class="badge" matBadge="10" matBadgeColor="warn" matBadgePosition="above after"></mat-icon>
+            <mat-icon  *ngIf="numberOfOrders > 0" class="badge" matBadge="{{numberOfOrders}}"  matBadgeColor="warn" matBadgePosition="above after"></mat-icon>
 
         </button>
 
