--- a/Frontend/Cantine/src/app/core-cantine/meals/meals.componenet.html
+++ b/Frontend/Cantine/src/app/core-cantine/meals/meals.componenet.html
@@ -41,7 +41,7 @@
                         </div>
                     </div>
                     <div style="margin: 15px">
-                        <button class="btn" (click)="addToOrder(meal)" id="{{meal.uuid}}"> Ajouter Ce Plat</button>
+                        <button class="btn" (click)="addToOrder(meal)" id="{{meal.id}}"> Ajouter Ce Plat</button>
                     </div>
                 </div>
             </div>
