--- a/Frontend/Cantine/src/app/core-cantine/menu/menu.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/menu/menu.component.html
@@ -21,7 +21,7 @@
                     </div>
                 </div>
                 <div>
-                    <button class="btn" (click)="addToOrder(menu)" style="margin-bottom: 15px" id="{{menu.uuid}}"> Ajouter Le Menu</button>
+                    <button class="btn" (click)="addToOrder(menu)" style="margin-bottom: 15px" id="{{menu.id}}"> Ajouter Le Menu</button>
                 </div>
             </div>
         </div>
