--- a/Frontend/Cantine/src/app/admin/meals/all-meals/all-meals.component.html
+++ b/Frontend/Cantine/src/app/admin/meals/all-meals/all-meals.component.html
@@ -49,7 +49,7 @@
                         </div>
                     </div>
                     <div style="margin: 15px">
-                        <button class="btn" (click)="updateMeal(meal.uuid)"> Modifier Le Plat</button>
+                        <button class="btn" (click)="updateMeal(meal.id)"> Modifier Le Plat</button>
                     </div>
                 </div>
             </div>
