--- a/Frontend/Cantine/src/app/admin/menus/all-menus/all-menus.component.html
+++ b/Frontend/Cantine/src/app/admin/menus/all-menus/all-menus.component.html
@@ -40,7 +40,7 @@
                         </div>
                     </div>
                     <div style="margin: 15px">
-                        <button class="btn" (click)="updateMenu(menu.uuid)"> Modifier Le Plat</button>
+                        <button class="btn" (click)="updateMenu(menu.id)"> Modifier Le Plat</button>
                     </div>
                 </div>
             </div>
