--- a/Frontend/Cantine/src/app/admin/dashbord/admin-dashboard/sign-up/admin-sign-up.component.html
+++ b/Frontend/Cantine/src/app/admin/dashbord/admin-dashboard/sign-up/admin-sign-up.component.html
@@ -245,8 +245,8 @@
                     <div class="form-group">
                         <label for="image"> Choisissez une image de profile </label>
 
-                        <input class="input-group-prepend"
-                               [ngClass]="{ 'is-invalid': submitted && f['image'].errors }" class="form-control"
+                        <input class="input-group-prepend form-control"
+                               [ngClass]="{ 'is-invalid': submitted && f['image'].errors }"
                                formControlName="image"
                                placeholder=" IMAGE  DU  Profil "
                                type="file"
