update  docker front and back

--- a/Frontend/Cantine/src/app/admin/main-admin/main-admin.component.html
+++ b/Frontend/Cantine/src/app/admin/main-admin/main-admin.component.html
@@ -12,7 +12,7 @@
     </div>
 
     <div class="logo-container">
-        <div class="sqli-div"><span class="cantière-span center">Cantière</span> <br>
+        <div class="sqli-div"><span class="cantière-span center">Cantinière</span> <br>
             <div class="bysqli"><span class="by">By</span> <span class="sqli">SQLI </span></div>
         </div>
     </div>
